<resources>
    <string name="app_name">Domo$two</string>
    <string name="wy_wietl_wydatki">Wyświetl wydatki</string>
    <string name="wy_wietl_statystyk">Wyświetl statystykę</string>
    <string name="app_stat_screem">Statystyki</string>
    <string name="zatwierd">Zatwierdź</string>
    <string name="dodaj_zdj_cie_produktu">Dodaj zdjęcie produktu</string>
    <string name="data_gwarancji">Data Gwarancji</string>
    <string name="cena">Cena</string>
    <string name="nazwa_produktu">Nazwa Produktu</string>
    <string name="zr_b_zdj_cie">Zrób zdjęcie</string>
    <string name="wybierz_zdj_cie_z_galerii">Wybierz zdjęcie z galerii</string>
    <string name="dodaj_produkt">Dodaj produkt</string>
    <string name="dodaj_zdj_cie_paragonu">Dodaj zdjęcie paragonu</string>
    <string name="sta_y_wydatek">Stały wydatek</string>
    <string name="kwota">Kwota</string>
    <string name="data_zakupu">Data zakupu</string>
    <string name="wybierz_kategori">Wybierz Kategorię</string>
    <string name="dodaj_wydatek">Dodaj wydatek</string>
    <string name="dodaj_kategori">Dodaj Kategorię</string>
    <string name="powr_t">Powrót</string>
    <string name="zdjecie">zdjecie</string>
    <string name="anuluj">anuluj</string>
    <string name="edytuj">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="allert_name">Nie podano nazwy</string>
    <string name="category">Kategoria</string>
    <string name="no_category">Brak kategorii</string>
    <string name="nazwa_wydatku">Nazwa</string>
    <string name="stala_wplata_czas">Częstotliwość wpłaty</string>
    <string name="everyday">Codziennie</string>
    <string name="every_week">Co tydzień</string>
    <string name="every_month">Co miesiąc</string>
    <string name="every_two_months">Co dwa miesiące</string>
    <string name="every_three_months">Co trzy miesiące</string>
    <string name="every_six_months">Co pół roku</string>
    <string name="every_year">Co rok</string>
    <string name="choose_category">Zarządzaj kategoriami</string>
    <string name="allert_category">Podana kategoria już istnieje!</string>
    <string name="czy_chcesz_usun_kategori">Czy chcesz usunąć kategorię:</string>
    <string name="cannot_delete_category">Nie można usunąć kategorii</string>
    <string name="bills">Rachunki</string>
    <string name="home">Dom</string>
    <string name="travel">Podróże</string>
    <string name="entertainment">Rozrywka</string>
    <string name="title_activity_list_expenses_tabbed">Lista wydatków</string>
    <string name="tab_text_1">Wszystkie Wydatki</string>
    <string name="tab_text_2">Szukaj</string>
    <string name="search">Szukaj</string>
    <string name="no_date">Nie podano daty</string>
    <string name="invalid_date">Niepoprawna data (Format: dd/mm/yyyy)</string>
    <string name="sortuj">Sortuj</string>
    <string name="search_option_1">po kategorii</string>
    <string name="search_option_2">po dacie</string>
    <string name="search_option_3">po kwocie</string>
    <string name="search_option_4">po nazwie</string>
    <string name="sort_option_1">po kategorii rosnąco</string>
    <string name="sort_option_2">po kategorii malejąco</string>
    <string name="sort_option_3">po cenie rosnąco</string>
    <string name="sort_option_4">po cenie malejąco</string>
    <string name="sort_option_5">po dacie rosnąco</string>
    <string name="sort_option_6">po dacie malejąco</string>
    <string name="tryb_wyszukiwania">Tryb wyszukiwania:</string>
    <string name="tryb_sortowania">Tryb sortowania:</string>
    <string name="wybierz_rodzaj_wykresu">Wybierz rodzaj wykresu</string>
    <string name="hint_option1">DD/MM/YYYY</string>
    <string name="hint_option2">MM/YYYY</string>
    <string name="hint_option3">YYYY</string>
    <string name="hint_option4">Wszystkie lata</string>
    <string name="chart_option1">Wybrany dzień</string>
    <string name="chart_option2">Wybrany miesiąc</string>
    <string name="chart_option3">Wybrany rok</string>
    <string name="chart_option4">Wszystkie lata</string>
    <string name="ok">OK</string>
    <string name="invalid_date_statistics">Niepoprawna data</string>
    <string name="month1">Styczeń</string>
    <string name="month2">Luty</string>
    <string name="month3">Marzec</string>
    <string name="month4">Kwiecień</string>
    <string name="month5">Maj</string>
    <string name="month6">Czerwiec</string>
    <string name="month7">Lipiec</string>
    <string name="month8">Sierpień</string>
    <string name="month9">Wrzesień</string>
    <string name="month10">Październik</string>
    <string name="month11">Listopad</string>
    <string name="month12">Grudzień</string>
    <string name="day">Dzień</string>
    <string name="spend">Wydano:</string>
    <string name="moneyFormat">Niepoprawny format kwoty!</string>
    <string name="periodTime">Wpisz zakres dat do usunięcia:</string>
    <string name="od">Od</string>
    <string name="data_do">Do</string>
    <string name="wrongDate">Data Od powinna być mniejsza od daty Do</string>


</resources>
