<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.polsl.project.activityClasses.StatisticsActivity">

    <Button
        android:id="@+id/cancleButtonDel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:text="@string/anuluj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/acceptButtonDel"
        app:layout_constraintTop_toBottomOf="@+id/toDate" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="38dp"
        android:layout_height="28dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:text="@string/data_do"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/toDate"
        app:layout_constraintStart_toEndOf="@+id/fromDate"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/toDate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_option1"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/acceptButtonDel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:text="@string/zatwierd"
        app:layout_constraintEnd_toStartOf="@+id/cancleButtonDel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromDate" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/periodTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fromDate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_option1"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="38dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:text="@string/od"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>