<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="296dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="358dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zdjecie"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:enabled="true"
                    android:hint="@string/nazwa_produktu"
                    android:inputType="text"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/ProductPrize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cena"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/GuarrantyDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/data_gwarancji"
                    android:inputType="date"
                    tools:targetApi="o" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/AddProductPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addPhoto"
            android:text="@string/dodaj_zdj_cie_produktu" />
    </LinearLayout>

    <Button
        android:id="@+id/AcceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="AcceptProductButton"
        android:text="@string/zatwierd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>