<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.polsl.project.activityClasses.ShowExpenseActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ReceiptPhoto"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_weight="1"
                android:contentDescription="@string/zdjecie"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textDataExpense2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/categoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:textColor="@android:color/black"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/TextDataExpense"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/data_zakupu"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ShoppingDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/data_zakupu"
                    android:inputType="date"
                    android:textColor="@android:color/black"
                    tools:targetApi="o" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/AddProduktButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addProduct"
                    android:text="@string/dodaj_produkt" />

                <ListView
                    android:id="@+id/ListOfProducts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextPrize"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="@string/kwota"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ShoppingPrize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/kwota"
                    android:inputType="none"
                    android:textColor="@android:color/black"
                    tools:targetApi="o"
                    android:importantForAutofill="no" />

                <CheckBox
                    android:id="@+id/checkConstrantExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/sta_y_wydatek" />

                <TextView
                    android:id="@+id/howOftenToPayShow"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/stala_wplata_czas"
                    android:textColor="@android:color/black"
                    android:visibility="visible"
                    tools:text="@string/stala_wplata_czas" />

                <EditText
                    android:id="@+id/displayEnum"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:hint="@string/stala_wplata_czas"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:textColor="@android:color/black"
                    tools:targetApi="o" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>