<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="296dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ProductPhoto"
                android:layout_width="358dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/zdjecie"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextProductName"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/nazwa_produktu"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="265dp"
                    tools:layout_editor_absoluteY="371dp" />

                <EditText
                    android:id="@+id/ProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/nazwa_produktu"
                    android:inputType="textMultiLine"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cena"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="350dp" />

                <EditText
                    android:id="@+id/ProductPrize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cena"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" tools:targetApi="o"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextGuarrantyDate"
                android:layout_width="187dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/data_gwarancji"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ProductGuarrantyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/data_gwarancji"
                android:importantForAutofill="no"
                android:inputType="textPersonName|date" tools:targetApi="o"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>